--- a/fig_appearance_only.tex
+++ b/fig_appearance_only.tex
@@ -12,7 +12,7 @@
 \end{tabular}
 \end{center}
 \vspace{-0.45cm}
-\caption[Dynamic texture synthesis versus texture synthesis.]{Dynamic texture synthesis versus texture synthesis.
+\caption[Dynamic texture synthesis versus texture synthesis]{Dynamic texture synthesis versus texture synthesis.
 (top row) Target texture.
 (middle)
 Texture synthesis without dynamics constraints shows
