--- a/fig_failures.tex
+++ b/fig_failures.tex
@@ -21,7 +21,7 @@
 \end{tabular}
 \end{center}
 \vspace{-0.45cm}
-\caption[Dynamic texture synthesis failure examples.]{Dynamic texture synthesis failure examples. In
+\caption[Dynamic texture synthesis failure examples]{Dynamic texture synthesis failure examples. In
 these cases, the failures are attributed to either the
 appearance or the dynamics not being homogeneous.}
 \label{fig:failures}
