--- a/fig_motiontransfer.tex
+++ b/fig_motiontransfer.tex
@@ -12,7 +12,7 @@ synthesized output \\
 \end{tabular}
 \end{center}
 \vspace{-0.45cm}
-\caption[Dynamics style transfer.]{Dynamics style transfer.
+\caption[Dynamics style transfer]{Dynamics style transfer.
 (top row) 
 Appearance of still water was
 used with the dynamics of a different water dynamic texture
