--- a/fig_pairwise_alltextures.tex
+++ b/fig_pairwise_alltextures.tex
@@ -1,7 +1,7 @@
 \begin{figure}[t]
 	\centering
     \epsfig{file=alltextures_approvedworkers.pdf, width = 0.9\textwidth}
-	\caption[Time-limited pairwise comparisons across all textures.]{Time-limited pairwise comparisons across all textures with $95\%$ statistical confidence intervals.}
+	\caption[Time-limited pairwise comparisons across all textures]{Time-limited pairwise comparisons across all textures with $95\%$ statistical confidence intervals.}
 	\label{fig:pairwise_alltextures}
 \end{figure}
 
