--- a/fig_temporally_endless_synthesis.tex
+++ b/fig_temporally_endless_synthesis.tex
@@ -1,7 +1,7 @@
 \begin{figure}[t]
 	\centering
     \epsfig{file=temporally_endless_synthesis.pdf, width = 0.9\textwidth}
-	\caption[Temporally-endless texture synthesis.]{Temporally-endless texture synthesis. (top row) Target texture. (bottom row) Synthesized texture.
+	\caption[Temporally-endless texture synthesis]{Temporally-endless texture synthesis. (top row) Target texture. (bottom row) Synthesized texture.
 	 By adding an additional loss to the dynamics stream that ties the last frame to the first, the synthesized dynamic texture appears to be temporally endless. Note the lack of an abrupt appearance change (\ie, temporal seam) between the last frame and the first frame of the synthesized dynamic texture.}
 	\label{fig:temporally_endless_synthesis}
 \end{figure}
