--- a/fig_successes.tex
+++ b/fig_successes.tex
@@ -1,4 +1,4 @@
-\begin{figure*}[t]
+\begin{figure*}[t!]
 \begin{center}
 \begin{tabular}{ >{\centering\arraybackslash} m{0.16\textwidth} || >{\centering\arraybackslash} m{0.80\textwidth} }
 
@@ -38,6 +38,6 @@
 \end{tabular}
 \end{center}
 \vspace{-0.45cm}
-\caption[Dynamic texture synthesis success examples.]{Dynamic texture synthesis success examples. Names correspond to files in the supplemental material.}
+\caption[Dynamic texture synthesis success examples]{Dynamic texture synthesis success examples. Names correspond to files in the supplemental material.}
  \label{fig:successes}
 \end{figure*}
