--- a/thesis.bib
+++ b/thesis.bib
@@ -368,14 +368,6 @@
 	journal = {Proceedings of the Royal Society of London B: Biological Sciences}
 }
 
-@article{ranjan2016,
-  author    = {Anurag Ranjan and
-               Michael J. Black},
-  title     = {Optical Flow Estimation using a Spatial Pyramid Network},
-  journal   = {arXiv:1611.00850},
-  year      = {2016}
-}
-
 @article{champandard2016,
   author    = {Alex J. Champandard},
   title     = {Semantic Style Transfer and Turning Two-Bit Doodles into Fine Artworks},
@@ -543,16 +535,6 @@ year = "1998"
   year      = {2015}
 }
 
-@InProceedings{ilg201,
-  author       = "Eddy Ilg and Nikolaus Mayer and Tonmoy Saikia and Margret Keuper and Alexey Dosovitskiy and Thomas Brox",
-  title        = "{FlowNet} 2.0: Evolution of Optical Flow Estimation with Deep Networks",
-  booktitle    = {CVPR},
-  month        = "Jul",
-  year         = "2017",
-  url          = "http://lmb.informatik.uni-freiburg.de/Publications/2017/IMKDB17"
-}
-
-
 @article{soomro2012ucf101,
   title     = {{UCF101}: A dataset of 101 human actions classes from videos in the wild},
   author    = {Soomro, Khurram and Zamir, Amir Roshan and Shah, Mubarak},
@@ -609,60 +591,13 @@ pages = "131--136",
 booktitle = "IEEE Motion Workshop: Representation and Analysis"
 }
 
-@misc{tabadi2015tensorflow,
-title={ {TensorFlow}: Large-Scale Machine Learning on Heterogeneous Systems},
-url={http://tensorflow.org/},
-note={Software available from tensorflow.org},
-author={Abadi et al, Mart\'{\i}n},
-  year={2015}
-}
-
-@misc{tabadi2015tensorflowlong,
-title={ {TensorFlow}: Large-Scale Machine Learning on Heterogeneous Systems},
-url={http://tensorflow.org/},
-note={Software available from tensorflow.org},
-author={
-    Mart\'{\i}n~Abadi and
-    Ashish~Agarwal and
-    Paul~Barham and
-    Eugene~Brevdo and
-    Zhifeng~Chen and
-    Craig~Citro and
-    Greg~S.~Corrado and
-    Andy~Davis and
-    Jeffrey~Dean and
-    Matthieu~Devin and
-    Sanjay~Ghemawat and
-    Ian~Goodfellow and
-    Andrew~Harp and
-    Geoffrey~Irving and
-    Michael~Isard and
-    Yangqing Jia and
-    Rafal~Jozefowicz and
-    Lukasz~Kaiser and
-    Manjunath~Kudlur and
-    Josh~Levenberg and
-    Dan~Man\'{e} and
-    Rajat~Monga and
-    Sherry~Moore and
-    Derek~Murray and
-    Chris~Olah and
-    Mike~Schuster and
-    Jonathon~Shlens and
-    Benoit~Steiner and
-    Ilya~Sutskever and
-    Kunal~Talwar and
-    Paul~Tucker and
-    Vincent~Vanhoucke and
-    Vijay~Vasudevan and
-    Fernanda~Vi\'{e}gas and
-    Oriol~Vinyals and
-    Pete~Warden and
-    Martin~Wattenberg and
-    Martin~Wicke and
-    Yuan~Yu and
-    Xiaoqiang~Zheng},
-  year={2015}
+@inproceedings{tabadi2015tensorflow,
+title    = {{TensorFlow}: A system for large-scale machine learning},
+author    = {Martin Abadi and Paul Barham and Jianmin Chen and Zhifeng Chen and Andy Davis and Jeffrey Dean and Matthieu Devin and Sanjay Ghemawat and Geoffrey Irving and Michael Isard and Manjunath Kudlur and Josh Levenberg and Rajat Monga and Sherry Moore and Derek G. Murray and Benoit Steiner and Paul Tucker and Vijay Vasudevan and Pete Warden and Martin Wicke and Yuan Yu and Xiaoqiang Zheng},
+year    = {2016},
+URL    = {https://www.usenix.org/system/files/conference/osdi16/osdi16-abadi.pdf},
+booktitle    = {12th USENIX Symposium on Operating Systems Design and Implementation (OSDI 16)},
+pages    = {265--283}
 }
 
 @inproceedings{teney2016,
@@ -710,4 +645,39 @@ author={
   title = {A Spatiotemporal Oriented Energy Network for Dynamic Texture Recognition},
   booktitle = ICCV,
   year = {2017},
+}
+
+@article{russakovsky2015,
+ author = {Russakovsky, Olga and Deng, Jia and Su, Hao and Krause, Jonathan and Satheesh, Sanjeev and Ma, Sean and Huang, Zhiheng and Karpathy, Andrej and Khosla, Aditya and Bernstein, Michael and Berg, Alexander C. and Fei-Fei, Li},
+ title = {Image{N}et Large Scale Visual Recognition Challenge},
+ journal = IJCV,
+ volume = {115},
+ number = {3},
+ year = {2015},
+ pages = {211--252},
+}
+
+@inproceedings{nair2010rectified,
+  title = {Rectified linear units improve restricted boltzmann machines},
+  author = {Nair, Vinod and Hinton, Geoffrey E.},
+  booktitle = ICML,
+  pages = {807--814},
+  year = {2010}
+}
+
+@book{derpanis2010role,
+  title = {On the Role of Representation in the Analysis of Visual Spacetime},
+  author = {Derpanis, Konstantinos G.},
+  publisher = {York University},
+  year = {2010}
+}
+
+@article{geiger2013vision,
+  title = {Vision meets robotics: The {KITTI} dataset},
+  author = {Geiger, Andreas and Lenz, Philip and Stiller, Christoph and Urtasun, Raquel},
+  journal = IJRR,
+  volume = {32},
+  number = {11},
+  pages = {1231--1237},
+  year = {2013}
 }
