--- a/evaluation.tex
+++ b/evaluation.tex
@@ -9,7 +9,7 @@ of the results.
 Given their temporal nature, the results are best viewed as 
 videos.
 The two-stream architecture was implemented using TensorFlow
-\cite{tabadi2015tensorflowlong}, an open source machine learning framework.
+\cite{tabadi2015tensorflow}, an open source machine learning framework.
 Results were generated using an NVIDIA Titan X (Pascal) GPU
 and synthesis times ranged between one to three hours 
 to generate $12$ frames with an image resolution of 
@@ -114,7 +114,7 @@ has factored appearance and dynamics, as desired.
 Dynamic textures synthesized incrementally, as described in Sec.\
 \ref{sec:incremental_synthesis}, are included in the supplemental.
 Sequences as long as 122 frames (using 11 frame subsequences) were synthesized
-with no observed divergence or degradation. The resulting textures are 
+with no observed divergence or degradation. The resulting textures were 
 perceptually indistinguishable from those synthesized with the batch process. \todomatthew{elaborate?}
 
 \subsection{Temporally-endless texture synthesis}
@@ -228,7 +228,7 @@ Fig.\ \ref{fig:pairwise_grouped}.
 \input{fig_pairwise_grouped}
 
 A full breakdown of the user study results by dynamic texture and 
-grouping can be found in the appendix. \todomatthew{include tables in appendix}
+grouping can be found in the appendix.
 Here some of the overall trends are discussed.
 
 \subsubsection{Appearance-based analysis}
