--- a/thesis-short.bib
+++ b/thesis-short.bib
@@ -73,6 +73,9 @@
 @STRING( IJCV = "International Journal of Computer Vision (IJCV)"
 )
 
+@STRING( IJRR = "International Journal of Robotics Research (IJRR)"
+)
+
 @STRING( IP = "T-IP"
 )
 
